# Woo-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  client.py  docker-compose.yml  dotenv_test.py  new_readme.md  on  package.json  pyproject.toml  requirements.txt  test_woocommerce_api.py  woocommerce-mcp-config.json
src/woocommerce_mcp/: __init__.py  coupons.py  customers.py  data.py  order_refunds.py  orders.py  payment_gateways.py  product_attributes.py  product_categories.py  product_reviews.py  product_tags.py  product_variations.py  products.py  reports.py  server.py  settings.py  shipping_methods.py  shipping_zones.py  taxes.py  utils.py  wordpress.py
tests/: __init__.py  conftest.py
tests/mocks/: __init__.py
tests/server/: __init__.py  test_coupons_tools.py  test_customers_tools.py  test_data_tools.py  test_get_categories.py  test_order_refunds_tools.py  test_orders_tools.py  test_payment_gateways_tools.py  test_product_attributes_tools.py  test_product_categories_tools.py  test_product_reviews_tools.py  test_product_tags_tools.py  test_product_tools.py  test_product_variations_tools.py  test_random_operations.py  test_reports_tools.py  test_server.py  test_settings_tools.py  test_shipping_methods_tools.py  test_shipping_zones_tools.py  test_taxes_tools.py  test_utils.py  test_wordpress_tools.py
